--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>True Interactions2</title>
+		<title>True Interactions</title>
 		<script src="vendor/jquery/jquery-2.1.3.min.js"></script>
 		<script src="vendor/semantic-ui/semantic.min.js"></script>
 		<script src="index.js"></script>
