--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
 		<link type="text/css" rel="stylesheet" href="index.css" />
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Oxygen&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Alegreya+Sans+SC:400,700' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Crushed' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
 		<div class="ui left vertical inverted labeled icon sidebar menu">
@@ -98,54 +100,40 @@
 
 			<div class="ui two column grid benefits">
 				<div class="column">
-					<div class="ui horizontal segment">
-						<h2 class="ui header">Design Applications Quickly</h2>
-						<p>Design your applications and develop them with existing tools you're already familiar with. Tint supports powerful display capabilities such as WebGL, CSS3, HTML5 or any JavaScript animation library. In addiiton access native widgets, toolbars, menus through JS.</p>
-					</div>
+					<h2 class="ui header">Design Applications Quickly</h2>
+					<p>Design your applications and develop them with existing tools you're already familiar with. Tint supports powerful display capabilities such as WebGL, CSS3, HTML5 or any JavaScript animation library. In addiiton access native widgets, toolbars, menus through JS.</p>
 				</div>
 				<div class="column">
-					<div class="ui horizontal segment">
-						<h2 class="ui header">Powerful Native Desktop API</h2>
-						<p>Tint's Javascript based API allows you to access functions and objects to integrate native functionality such as system settings, toolbars, trays, notifications and transparent, glass, framed, kiosk, fullscreen and regular window styles. </p>
-					</div>
+					<h2 class="ui header">Powerful Native Desktop API</h2>
+					<p>Tint's Javascript based API allows you to access functions and objects to integrate native functionality such as system settings, toolbars, trays, notifications and transparent, glass, framed, kiosk, fullscreen and regular window styles. </p>
 				</div>
 				<div class="column">
-					<div class="ui horizontal segment">
-						<h2 class="ui header">Application Packager</h2>
-						<p>Tint's Compiler takes your HTML, CSS and Javascript resources and compiles a MacOSX and Windows native application with no third-party dependencies or runtimes to install. Distribute your apps how you want.</p>
-					</div>
+					<h2 class="ui header">Application Packager</h2>
+					<p>Tint's Compiler takes your HTML, CSS and Javascript resources and compiles a MacOSX and Windows native application with no third-party dependencies or runtimes to install. Distribute your apps how you want.</p>
 				</div>
 				<div class="column">
-					<div class="ui horizontal segment">
-						<h2 class="ui header">Built-in Debugger</h2>
-						<p>Use built in debugging javascript tools to set break points, trace stacks, change HTML and JavaScript or inspect elements live.</p>
-					</div>
+					<h2 class="ui header">Built-in Debugger</h2>
+					<p>Use built in debugging javascript tools to set break points, trace stacks, change HTML and JavaScript or inspect elements live.</p>
 				</div>
 			</div>
 			
 			<div class="ui two column grid links">
 				<div class="column">
-					<div class="ui horizontal segment">
-						<h2 class="ui header">GitHub - Issues and Planned Features</h2>
-						<p>Find our source code, file issues, track changes and find out more from our GitHub account.</p>
-					</div>
+					<h2 class="ui header">GitHub - Issues and Planned Features</h2>
+					<p>Find our source code, file issues, track changes and find out more from our GitHub account.</p>
 				</div>
 				<div class="column">
-					<div class="ui horizontal segment">
-						<h2 class="ui header">TintAPI - Docs & Examples</h2>
-						<p>Browse through Tint's Javascript API, find overviews, examples and a 30-second get started guide.</p>
-					</div>
+					<h2 class="ui header">TintAPI - Docs &amp; Examples</h2>
+					<p>Browse through Tint's Javascript API, find overviews, examples and a 30-second get started guide.</p>
 				</div>
 				<div class="sixteen wide column">
-					<div class="ui horizontal segment">
-						<h2 class="ui header">Find Community Support and Ask Questions</h2>
-						<p>Go to Tint's Google Group to ask questions, search for information, share your application or find out more about Tint's roadmap.</p>
-					</div>
+					<h2 class="ui header">Find Community Support and Ask Questions</h2>
+					<p>Go to Tint's Google Group to ask questions, search for information, share your application or find out more about Tint's roadmap.</p>
 				</div>
 			</div>
 
   
-			<table class="ui table">
+			<table class="ui table pricing">
 			  <thead>
 			    <tr>
 			      <th>License</th>
