--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,7 @@
 			<div class="ui basic segment hero">
 				<img id="wordmark" src="tint-wordmark.svg" />
 				<h1 data-translation="hero-statement" class="ui header">
-					Explore New Ways to Create Desktop Applications
+                                  Quickly Develop Stunning Native Desktop Apps with JavaScript
 				</h1>
 				<p data-translation="hero-followup"> 
 			  		Tint compiles beautiful and unique applications for MacOS X and Windows using HTML5, CSS3, JavaScript and an advanced JS-based API.
