--- a/public/index.html
+++ b/public/index.html
@@ -88,19 +88,51 @@
           Tint compiles beautiful and unique applications for MacOS X and Windows using HTML5, CSS3, JavaScript and an advanced JS-based API.
         </p>
         <div>
-          <div class="ui action fluid input">
-            <input type="text" data-translation="download-cta" placeholder="Enter your email address to download">
-            <div data-translation="download" class="ui button icon">
-              <i class="download icon"></i>
-            </div>
+
+          <!-- Begin MailChimp Signup Form -->
+          <div id="mc_embed_signup">
+            <form action="//inchingtowardsunderstanding.us1.list-manage.com/subscribe/post?u=e391b19fb3571d83a42f97c8c&amp;id=1402e2970a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+              <div id="mc_embed_signup_scroll">
+
+                <div class="mc-field-group">
+                  <label for="mce-EMAIL">Email Address </label>
+                  <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+                </div>
+                <div id="mce-responses" class="clear">
+                  <div class="response" id="mce-error-response" style="display:none"></div>
+                  <div class="response" id="mce-success-response" style="display:none"></div>
+                </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                <div style="position: absolute; left: -5000px;"><input type="text" name="b_e391b19fb3571d83a42f97c8c_1402e2970a" tabindex="-1" value=""></div>
+                <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+              </div>
+            </form>
           </div>
-          <div>
-            <div class="ui toggle checkbox subscribe">
-              <input type="checkbox" name="public">
-              <label data-translation="subscribe-new-releases">Subscribe to newsletter and updates</label>
+
+          <!--End mc_embed_signup-->
+          <form class="ui form segment">
+            <div class="field">
+              <label>Test Field</label>
+              <input placeholder="Test Field" name="email-address" type="email">
             </div>
+            <div class="ui blue submit button">Submit</div>
+            <div class="ui reset button">Reset</div>
+            <div class="ui clear button">Clear</div>
+          </form>
+          <!--           <form class="ui form" action="">
+          </form>
+          <div class="ui action input">
+          <input type="text" data-translation="download-cta" placeholder="Enter your email address to be the first to know when Tint2 releases!">
+          <div data-translation="download" class="ui button icon">
+          <i class="download icon"></i>
           </div>
-        </div>
+          </div>
+          <!--           <div>
+          <div class="ui toggle checkbox subscribe">
+          <input type="checkbox" name="public">
+          <label data-translation="subscribe-new-releases">Subscribe to newsletter and updates</label>
+          </div>
+          </div> -->
+        </div> -->
       </div>
 
       <div class="ui two column grid stackable items benefits">
@@ -236,10 +268,12 @@
       </div>
     </div>
 
-    <!-- SCIPRTS -->
+    <!-- SCRIPTS -->
     <script src=""> </script>
     <script src="vendor/jquery/jquery-2.1.3.min.js"></script>
     <script src="vendor/semantic-ui/semantic.min.js"></script>
     <script src="index.js"></script>
+      <!-- MailChimp -->
+    <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
   </body>
 </html>
