updated benefits columns, started reworking footer

--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,6 @@
     </a>
     </div>
     -->
-    <div class="content dimmed pusher">
 
       <!--       <div class="ui secondary menu navigation">
       <div class="item">
@@ -109,14 +108,12 @@
           </div>
 
           <!--End mc_embed_signup-->
-          <form class="ui form segment">
+
+          <form class="ui transparent form segment">
             <div class="field">
-              <label>Test Field</label>
-              <input placeholder="Test Field" name="email-address" type="email">
+              <input placeholder="What's Your Email Address?" name="email-address" type="text">
             </div>
-            <div class="ui blue submit button">Submit</div>
-            <div class="ui reset button">Reset</div>
-            <div class="ui clear button">Clear</div>
+            <div class="ui green submit button">Submit</div>
           </form>
           <!--           <form class="ui form" action="">
           </form>
@@ -135,16 +132,18 @@
         </div> -->
       </div>
 
-      <div class="ui two column grid stackable items benefits">
+      <div class="ui three column grid centered stackable items benefits">
 
-        <div class="column">
-          <h2 class="ui header">Design Applications Quickly</h2>
-          <p>Design your applications and develop them with existing tools you're already familiar with. Tint supports powerful display capabilities such as WebGL, CSS3, HTML5 or any JavaScript animation library. In addiiton access native widgets, toolbars, menus through JS.</p>
-        </div>
+        <div class="row">
+          <div class="column">
+            <h2 class="ui header">Design Applications Quickly</h2>
+            <p>Design your applications and develop them with existing tools you're already familiar with. Tint supports powerful display capabilities such as WebGL, CSS3, HTML5 or any JavaScript animation library. In addiiton access native widgets, toolbars, menus through JS.</p>
+          </div>
 
-        <div class="column">
-          <h2 class="ui header">Powerful Native Desktop API</h2>
-          <p>Tint's Javascript based API allows you to access functions and objects to integrate native functionality such as system settings, toolbars, trays, notifications and transparent, glass, framed, kiosk, fullscreen and regular window styles. </p>
+          <div class="column">
+            <h2 class="ui header">Powerful Native Desktop API</h2>
+            <p>Tint's Javascript based API allows you to access functions and objects to integrate native functionality such as system settings, toolbars, trays, notifications and transparent, glass, framed, kiosk, fullscreen and regular window styles. </p>
+          </div>
         </div>
 
         <div class="column">
@@ -158,17 +157,17 @@
         </div>
       </div>
 
-      <div class="ui two column grid items stackable">
+      <div class="ui three column grid centered items stackable">
 
         <div class="column">
           <div class="ui segment link item">
-              <!--               <div class="ui tiny image">
-              <img alt="" src="octocat.png"/>
-              </div> -->
-              <div class="content">
-                <h2 class="ui header">GitHub - Issues and Planned Features</h2>
-                <p>Find our source code, file issues, track changes and find out more from our GitHub account.</p>
-              </div>
+            <!--               <div class="ui tiny image">
+            <img alt="" src="octocat.png"/>
+            </div> -->
+            <div class="content">
+              <h2 class="ui header">GitHub - Issues and Planned Features</h2>
+              <p>Find our source code, file issues, track changes and find out more from our GitHub account.</p>
+            </div>
           </div>
         </div>
 
@@ -243,37 +242,39 @@
       <!--   </tbody> -->
       <!-- </table> -->
 
-      <div class="ui segment contact-information">
-        <h3 class="ui header">Contact Us</h3>
-        <p>801-556-5465</p>
-        <p><a href="mailto:sales@trueinteractions.com">sales@trueinteractions.com</a></p>
-        <p><a href="mailto:support@trueinteractions.com">support@trueinteractions.com</a></p>
-      </div>
+      <footer>
 
-      <div class="ui segment policies">
+        <div class="ui two column grid stackable">
+          <div class="column">
+            <div class="ui horizontal segment inverted">
+              <h3 class="header">Contact Us</h3>
+              <p>801-556-5465</p>
+              <p><a href="mailto:sales@trueinteractions.com">sales@trueinteractions.com</a></p>
+              <p><a href="mailto:support@trueinteractions.com">support@trueinteractions.com</a></p>
+            </div>
+          </div>
 
-        <!--        <h3 class="ui header">Refunds</h3> -->
-        <!--        <p>Refunds will be issued for any reason within 30 days of purchase.</p> -->
+          <div class="column">
+            <div class="ui horizontal segment inverted">
+              <h3 class="ui header">Privacy</h3>
+              <p>Your information is never shared with third party companies, nor do we contact you unless there's an upgrade</p>
+            </div>
+          </div>
+        </div>
 
-        <h3 class="ui header">Privacy</h3>
-        <p>Your information is never shared with third party companies, nor do we contact you unless there's an upgrade</p>
-      </div>
+        <div class="ui segment anxillary">
 
-      <div class="ui segment anxillary">
+          <!-- <h3 class="ui header">Payment Methods</h3> -->
+          <!-- <img src="https://www.trueinteractions.com/images/cc-sprite.png" /> -->
 
-        <!-- <h3 class="ui header">Payment Methods</h3> -->
-        <!-- <img src="https://www.trueinteractions.com/images/cc-sprite.png" /> -->
-
-        <p>Copyright 2005-2015 True Interactions</p>
-      </div>
-    </div>
+          <p>Copyright 2005-2015 True Interactions</p>
+        </div>
+      </footer>
 
     <!-- SCRIPTS -->
     <script src=""> </script>
     <script src="vendor/jquery/jquery-2.1.3.min.js"></script>
     <script src="vendor/semantic-ui/semantic.min.js"></script>
     <script src="index.js"></script>
-      <!-- MailChimp -->
-    <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
   </body>
 </html>
