--- a/public/index.html
+++ b/public/index.html
@@ -55,221 +55,221 @@
     </div>
     -->
 
-      <!--       <div class="ui secondary menu navigation">
-      <div class="item">
-      <img id="logo" src="tint-logo2.svg">
-      </div>
-      <a id="menu" class="item">
-      <i class="list layout icon"></i>
-      </a>
-      <a class="item">
-      <i class="sign in icon"></i>
-      </a>
-      <div class="right menu">
-      <div class="item">
-      <div class="ui transparent icon input">
-      <input type="text" placeholder="Search...">
-      <i class="search link icon"></i>
-      </div>
-      </div>
-      <div class="item">
-      <img id="mascot" src="tint.svg">
-      </div>
-      </div>
-      </div>
-      -->
-      <div class="ui basic segment hero">
-        <img id="wordmark" src="tint-wordmark.svg" />
-        <h1 data-translation="hero-statement" class="ui header">
-          Quickly Develop Stunning Native Desktop Apps with JavaScript
-        </h1>
-        <p data-translation="hero-followup">
-          Tint compiles beautiful and unique applications for MacOS X and Windows using HTML5, CSS3, JavaScript and an advanced JS-based API.
-        </p>
-        <div>
+    <!--       <div class="ui secondary menu navigation">
+    <div class="item">
+    <img id="logo" src="tint-logo2.svg">
+    </div>
+    <a id="menu" class="item">
+    <i class="list layout icon"></i>
+    </a>
+    <a class="item">
+    <i class="sign in icon"></i>
+    </a>
+    <div class="right menu">
+    <div class="item">
+    <div class="ui transparent icon input">
+    <input type="text" placeholder="Search...">
+    <i class="search link icon"></i>
+    </div>
+    </div>
+    <div class="item">
+    <img id="mascot" src="tint.svg">
+    </div>
+    </div>
+    </div>
+    -->
+    <div class="ui basic segment hero">
+      <img id="wordmark" src="tint-wordmark.svg" />
+      <h1 data-translation="hero-statement" class="ui header">
+        Quickly Develop Stunning Native Desktop Apps with JavaScript
+      </h1>
+      <p data-translation="hero-followup">
+        Tint compiles beautiful and unique applications for MacOS X and Windows using HTML5, CSS3, JavaScript and an advanced JS-based API.
+      </p>
+      <div>
 
-          <!-- Begin MailChimp Signup Form -->
-          <div id="mc_embed_signup">
-            <form action="//inchingtowardsunderstanding.us1.list-manage.com/subscribe/post?u=e391b19fb3571d83a42f97c8c&amp;id=1402e2970a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-              <div id="mc_embed_signup_scroll">
+        <!-- Begin MailChimp Signup Form -->
+        <div id="mc_embed_signup">
+          <form action="//inchingtowardsunderstanding.us1.list-manage.com/subscribe/post?u=e391b19fb3571d83a42f97c8c&amp;id=1402e2970a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+            <div id="mc_embed_signup_scroll">
 
-                <div class="mc-field-group">
-                  <label for="mce-EMAIL">Email Address </label>
-                  <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-                </div>
-                <div id="mce-responses" class="clear">
-                  <div class="response" id="mce-error-response" style="display:none"></div>
-                  <div class="response" id="mce-success-response" style="display:none"></div>
-                </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                <div style="position: absolute; left: -5000px;"><input type="text" name="b_e391b19fb3571d83a42f97c8c_1402e2970a" tabindex="-1" value=""></div>
-                <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+              <div class="mc-field-group">
+                <label for="mce-EMAIL">Email Address </label>
+                <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
               </div>
-            </form>
-          </div>
-
-          <!--End mc_embed_signup-->
-
-          <form class="ui transparent form segment">
-            <div class="field">
-              <input placeholder="What's Your Email Address?" name="email-address" type="text">
+              <div id="mce-responses" class="clear">
+                <div class="response" id="mce-error-response" style="display:none"></div>
+                <div class="response" id="mce-success-response" style="display:none"></div>
+              </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+              <div style="position: absolute; left: -5000px;"><input type="text" name="b_e391b19fb3571d83a42f97c8c_1402e2970a" tabindex="-1" value=""></div>
+              <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
             </div>
-            <div class="ui green submit button">Submit</div>
           </form>
-          <!--           <form class="ui form" action="">
-          </form>
-          <div class="ui action input">
-          <input type="text" data-translation="download-cta" placeholder="Enter your email address to be the first to know when Tint2 releases!">
-          <div data-translation="download" class="ui button icon">
-          <i class="download icon"></i>
+        </div>
+
+        <!--End mc_embed_signup-->
+
+        <form class="ui transparent form segment">
+          <div class="field">
+            <input placeholder="What's Your Email Address?" name="email-address" type="text">
           </div>
-          </div>
-          <!--           <div>
-          <div class="ui toggle checkbox subscribe">
-          <input type="checkbox" name="public">
-          <label data-translation="subscribe-new-releases">Subscribe to newsletter and updates</label>
-          </div>
-          </div> -->
+          <div class="ui green submit button">Submit</div>
+        </form>
+        <!--           <form class="ui form" action="">
+        </form>
+        <div class="ui action input">
+        <input type="text" data-translation="download-cta" placeholder="Enter your email address to be the first to know when Tint2 releases!">
+        <div data-translation="download" class="ui button icon">
+        <i class="download icon"></i>
+        </div>
+        </div>
+        <!--           <div>
+        <div class="ui toggle checkbox subscribe">
+        <input type="checkbox" name="public">
+        <label data-translation="subscribe-new-releases">Subscribe to newsletter and updates</label>
+        </div>
         </div> -->
+      </div> -->
+    </div>
+
+    <div class="ui three column grid centered stackable items benefits">
+
+      <div class="row">
+        <div class="column">
+          <h2 class="ui header">Design Applications Quickly</h2>
+          <p>Design your applications and develop them with existing tools you're already familiar with. Tint supports powerful display capabilities such as WebGL, CSS3, HTML5 or any JavaScript animation library. In addiiton access native widgets, toolbars, menus through JS.</p>
+        </div>
+
+        <div class="column">
+          <h2 class="ui header">Powerful Native Desktop API</h2>
+          <p>Tint's Javascript based API allows you to access functions and objects to integrate native functionality such as system settings, toolbars, trays, notifications and transparent, glass, framed, kiosk, fullscreen and regular window styles. </p>
+        </div>
       </div>
 
-      <div class="ui three column grid centered stackable items benefits">
+      <div class="column">
+        <h2 class="ui header">Application Packager</h2>
+        <p>Tint's Compiler takes your HTML, CSS and Javascript resources and compiles a MacOSX and Windows native application with no third-party dependencies or runtimes to install. Distribute your apps how you want.</p>
+      </div>
 
+      <div class="column">
+        <h2 class="ui header">Built-in Debugger</h2>
+        <p>Use built in debugging javascript tools to set break points, trace stacks, change HTML and JavaScript or inspect elements live.</p>
+      </div>
+    </div>
+
+    <div class="ui three column grid centered items stackable">
+
+      <div class="column">
+        <div class="ui segment link item">
+          <!--               <div class="ui tiny image">
+          <img alt="" src="octocat.png"/>
+          </div> -->
+          <div class="content">
+            <h2 class="ui header">GitHub - Issues and Planned Features</h2>
+            <p>Find our source code, file issues, track changes and find out more from our GitHub account.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="ui column">
+        <div class="ui segment link item">
+          <!--             <div class="ui tiny image">
+          <img alt="" src="octocat.png"/>
+          </div> -->
+          <div class="content">
+            <h2 class="ui header">TintAPI - Docs &amp; Examples</h2>
+            <p>Browse through Tint's Javascript API, find overviews, examples and a 30-second get started guide.</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- <div class="column"> -->
+      <!--   <h2 class="ui header">Find Community Support and Ask Questions</h2> -->
+      <!--   <p>Go to Tint's Google Group to ask questions, search for information, share your application or find out more about Tint's roadmap.</p> -->
+      <!-- </div> -->
+
+    </div>
+
+    <!-- <table class="ui table pricing"> -->
+    <!--   <thead> -->
+    <!--     <tr> -->
+    <!--       <th>License</th> -->
+    <!--       <th>Previews</th> -->
+    <!--       <th>Upgrades</th> -->
+    <!--       <th>Usage</th> -->
+    <!--       <th>Support</th> -->
+    <!--       <th>CLI Utilities</th> -->
+    <!--       <th>Source Code</th> -->
+    <!--     </tr> -->
+    <!--   </thead> -->
+    <!--   <tbody> -->
+    <!--     <tr> -->
+    <!--       <td>$49 Personal License</td> -->
+    <!--       <td>None</td> -->
+    <!--       <td>None</td> -->
+    <!--       <td>Non-Profit</td> -->
+    <!--       <td>None</td> -->
+    <!--       <td>None</td> -->
+    <!--       <td>None</td> -->
+    <!--     </tr> -->
+    <!--     <tr> -->
+    <!--       <td>$99 Educational License</td> -->
+    <!--       <td>3-months</td> -->
+    <!--       <td>3-months</td> -->
+    <!--       <td>Non-Profit</td> -->
+    <!--       <td>Email</td> -->
+    <!--       <td>None</td> -->
+    <!--       <td>None</td> -->
+    <!--     </tr> -->
+    <!--     <tr> -->
+    <!--       <td>$299 Professional License</td> -->
+    <!--       <td>6-months</td> -->
+    <!--       <td>6-months</td> -->
+    <!--       <td>Any</td> -->
+    <!--       <td>Email</td> -->
+    <!--       <td>Included</td> -->
+    <!--       <td>None</td> -->
+    <!--     </tr> -->
+    <!--     <tr> -->
+    <!--       <td>$499 Commercial License</td> -->
+    <!--       <td>1-year</td> -->
+    <!--       <td>1-year</td> -->
+    <!--       <td>Any</td> -->
+    <!--       <td>Phone</td> -->
+    <!--       <td>Included</td> -->
+    <!--       <td>Included</td> -->
+    <!--     </tr> -->
+    <!--   </tbody> -->
+    <!-- </table> -->
+
+    <footer>
+      <div class="ui centered grid stackable">
+        <div class="twelve wide column">
+          <div class="ui segment inverted">
+            <h3 class="header">Contact Us</h3>
+            <p>801-556-5465</p>
+            <p><a href="mailto:sales@trueinteractions.com">sales@trueinteractions.com</a></p>
+            <p><a href="mailto:support@trueinteractions.com">support@trueinteractions.com</a></p>
+          </div>
+        </div>
         <div class="row">
-          <div class="column">
-            <h2 class="ui header">Design Applications Quickly</h2>
-            <p>Design your applications and develop them with existing tools you're already familiar with. Tint supports powerful display capabilities such as WebGL, CSS3, HTML5 or any JavaScript animation library. In addiiton access native widgets, toolbars, menus through JS.</p>
-          </div>
-
-          <div class="column">
-            <h2 class="ui header">Powerful Native Desktop API</h2>
-            <p>Tint's Javascript based API allows you to access functions and objects to integrate native functionality such as system settings, toolbars, trays, notifications and transparent, glass, framed, kiosk, fullscreen and regular window styles. </p>
-          </div>
-        </div>
-
-        <div class="column">
-          <h2 class="ui header">Application Packager</h2>
-          <p>Tint's Compiler takes your HTML, CSS and Javascript resources and compiles a MacOSX and Windows native application with no third-party dependencies or runtimes to install. Distribute your apps how you want.</p>
-        </div>
-
-        <div class="column">
-          <h2 class="ui header">Built-in Debugger</h2>
-          <p>Use built in debugging javascript tools to set break points, trace stacks, change HTML and JavaScript or inspect elements live.</p>
-        </div>
-      </div>
-
-      <div class="ui three column grid centered items stackable">
-
-        <div class="column">
-          <div class="ui segment link item">
-            <!--               <div class="ui tiny image">
-            <img alt="" src="octocat.png"/>
-            </div> -->
-            <div class="content">
-              <h2 class="ui header">GitHub - Issues and Planned Features</h2>
-              <p>Find our source code, file issues, track changes and find out more from our GitHub account.</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="ui column">
-          <div class="ui segment link item">
-            <!--             <div class="ui tiny image">
-            <img alt="" src="octocat.png"/>
-            </div> -->
-            <div class="content">
-              <h2 class="ui header">TintAPI - Docs &amp; Examples</h2>
-              <p>Browse through Tint's Javascript API, find overviews, examples and a 30-second get started guide.</p>
-            </div>
-          </div>
-        </div>
-
-        <!-- <div class="column"> -->
-        <!--   <h2 class="ui header">Find Community Support and Ask Questions</h2> -->
-        <!--   <p>Go to Tint's Google Group to ask questions, search for information, share your application or find out more about Tint's roadmap.</p> -->
-        <!-- </div> -->
-
-      </div>
-
-      <!-- <table class="ui table pricing"> -->
-      <!--   <thead> -->
-      <!--     <tr> -->
-      <!--       <th>License</th> -->
-      <!--       <th>Previews</th> -->
-      <!--       <th>Upgrades</th> -->
-      <!--       <th>Usage</th> -->
-      <!--       <th>Support</th> -->
-      <!--       <th>CLI Utilities</th> -->
-      <!--       <th>Source Code</th> -->
-      <!--     </tr> -->
-      <!--   </thead> -->
-      <!--   <tbody> -->
-      <!--     <tr> -->
-      <!--       <td>$49 Personal License</td> -->
-      <!--       <td>None</td> -->
-      <!--       <td>None</td> -->
-      <!--       <td>Non-Profit</td> -->
-      <!--       <td>None</td> -->
-      <!--       <td>None</td> -->
-      <!--       <td>None</td> -->
-      <!--     </tr> -->
-      <!--     <tr> -->
-      <!--       <td>$99 Educational License</td> -->
-      <!--       <td>3-months</td> -->
-      <!--       <td>3-months</td> -->
-      <!--       <td>Non-Profit</td> -->
-      <!--       <td>Email</td> -->
-      <!--       <td>None</td> -->
-      <!--       <td>None</td> -->
-      <!--     </tr> -->
-      <!--     <tr> -->
-      <!--       <td>$299 Professional License</td> -->
-      <!--       <td>6-months</td> -->
-      <!--       <td>6-months</td> -->
-      <!--       <td>Any</td> -->
-      <!--       <td>Email</td> -->
-      <!--       <td>Included</td> -->
-      <!--       <td>None</td> -->
-      <!--     </tr> -->
-      <!--     <tr> -->
-      <!--       <td>$499 Commercial License</td> -->
-      <!--       <td>1-year</td> -->
-      <!--       <td>1-year</td> -->
-      <!--       <td>Any</td> -->
-      <!--       <td>Phone</td> -->
-      <!--       <td>Included</td> -->
-      <!--       <td>Included</td> -->
-      <!--     </tr> -->
-      <!--   </tbody> -->
-      <!-- </table> -->
-
-      <footer>
-
-        <div class="ui two column grid stackable">
-          <div class="column">
-            <div class="ui horizontal segment inverted">
-              <h3 class="header">Contact Us</h3>
-              <p>801-556-5465</p>
-              <p><a href="mailto:sales@trueinteractions.com">sales@trueinteractions.com</a></p>
-              <p><a href="mailto:support@trueinteractions.com">support@trueinteractions.com</a></p>
-            </div>
-          </div>
-
-          <div class="column">
-            <div class="ui horizontal segment inverted">
+          <div class="twelve wide column">
+            <div class="ui segment inverted">
               <h3 class="ui header">Privacy</h3>
-              <p>Your information is never shared with third party companies, nor do we contact you unless there's an upgrade</p>
+              <p>Your information is never shared with third party companies, nor do we contact you unless there's an upgrade.</p>
             </div>
           </div>
         </div>
-
-        <div class="ui segment anxillary">
-
-          <!-- <h3 class="ui header">Payment Methods</h3> -->
-          <!-- <img src="https://www.trueinteractions.com/images/cc-sprite.png" /> -->
-
-          <p>Copyright 2005-2015 True Interactions</p>
+        <div class="row">
+          <div class="twelve wide column">
+            <div class="ui segment inverted">
+              <p>Copyright 2005-2015 True Interactions</p>
+            </div>
+          </div>
         </div>
-      </footer>
+      </div>
+
+    </footer>
 
     <!-- SCRIPTS -->
     <script src=""> </script>
