icons on github and docs

--- a/public/index.html
+++ b/public/index.html
@@ -157,28 +157,52 @@
       </div>
     </div>
 
-    <div class="ui three column grid centered items stackable">
+    <div class="ui three column grid centered stackable">
 
       <div class="column">
-        <div class="ui segment link item">
-          <!--               <div class="ui tiny image">
-          <img alt="" src="octocat.png"/>
-          </div> -->
-          <div class="content">
-            <h2 class="ui header">GitHub - Issues and Planned Features</h2>
-            <p>Find our source code, file issues, track changes and find out more from our GitHub account.</p>
+        <div class="ui segment">
+          <div class="ui items">
+            <div class="ui item">
+              <div class="ui tiny image">
+                <a href="https://github.com/trueinteractions/tint2">
+                  <img alt="github logo" src="octocat.png"/>
+                </a>
+              </div>
+              <div class="content">
+                <h2 class="ui header">
+                  <a href="https://github.com/trueinteractions/tint2/issues">
+                    Issues and Planned Features
+                  </a>
+                </h2>
+                <div class="description">
+                  <p>Find our source code, file issues, track changes and find out more from our <a href="https://github.com/trueinteractions/tint2">GitHub</a> account.</p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
 
-      <div class="ui column">
-        <div class="ui segment link item">
-          <!--             <div class="ui tiny image">
-          <img alt="" src="octocat.png"/>
-          </div> -->
-          <div class="content">
-            <h2 class="ui header">TintAPI - Docs &amp; Examples</h2>
-            <p>Browse through Tint's Javascript API, find overviews, examples and a 30-second get started guide.</p>
+      <div class="column">
+        <div class="ui segment">
+          <div class="ui items">
+            <div class="ui item">
+              <div class="ui tiny image">
+                <a href="https://www.trueinteractions.com/docs/">
+                  <img alt="documentation" src="open-book.png"/>
+                </a>
+              </div>
+              <div class="content">
+                <h2 class="ui header">
+                  <a href="https://www.trueinteractions.com/tint2/docs/">
+                    TintAPI - Docs &amp; Examples
+                  </a>
+                </h2>
+                <div class="description">
+                  <p>Browse through Tint's Javascript API, find overviews, examples and a <a href="https://www.trueinteractions.com/tint2/docs/tutorial-gettingstarted.html">30-second getting started guide</a>.</p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
