--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,6 @@
 
     <!-- FONTS -->
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-    <!--     <link href='http://fonts.googleapis.com/css?family=Oxygen&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Alegreya+Sans+SC:400,700' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Crushed' rel='stylesheet' type='text/css'> -->
   </head>
   <body>
 
@@ -88,48 +85,19 @@
       </p>
       <div>
 
-        <!-- Begin MailChimp Signup Form -->
+        <!-- Mail Chimp Email Form -->
         <div id="mc_embed_signup">
-          <form action="//inchingtowardsunderstanding.us1.list-manage.com/subscribe/post?u=e391b19fb3571d83a42f97c8c&amp;id=1402e2970a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-            <div id="mc_embed_signup_scroll">
-
-              <div class="mc-field-group">
-                <label for="mce-EMAIL">Email Address </label>
-                <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-              </div>
-              <div id="mce-responses" class="clear">
-                <div class="response" id="mce-error-response" style="display:none"></div>
-                <div class="response" id="mce-success-response" style="display:none"></div>
-              </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+          <form class="ui transparent form segment" action="//inchingtowardsunderstanding.us1.list-manage.com/subscribe/post?u=e391b19fb3571d83a42f97c8c&amp;id=1402e2970a" method="post" target="_blank">
+            <div class="field">
+              <input placeholder="What's Your Email Address?" name="EMAIL" type="text" id="mce-EMAIL">
+              <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
               <div style="position: absolute; left: -5000px;"><input type="text" name="b_e391b19fb3571d83a42f97c8c_1402e2970a" tabindex="-1" value=""></div>
-              <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
             </div>
+            <div class="ui green submit button">Submit</div>
           </form>
         </div>
 
-        <!--End mc_embed_signup-->
-
-        <form class="ui transparent form segment">
-          <div class="field">
-            <input placeholder="What's Your Email Address?" name="email-address" type="text">
-          </div>
-          <div class="ui green submit button">Submit</div>
-        </form>
-        <!--           <form class="ui form" action="">
-        </form>
-        <div class="ui action input">
-        <input type="text" data-translation="download-cta" placeholder="Enter your email address to be the first to know when Tint2 releases!">
-        <div data-translation="download" class="ui button icon">
-        <i class="download icon"></i>
-        </div>
-        </div>
-        <!--           <div>
-        <div class="ui toggle checkbox subscribe">
-        <input type="checkbox" name="public">
-        <label data-translation="subscribe-new-releases">Subscribe to newsletter and updates</label>
-        </div>
-        </div> -->
-      </div> -->
+      </div>
     </div>
 
     <div class="ui three column grid centered stackable items benefits">
@@ -137,7 +105,7 @@
       <div class="row">
         <div class="column">
           <h2 class="ui header">Design Applications Quickly</h2>
-          <p>Design your applications and develop them with existing tools you're already familiar with. Tint supports powerful display capabilities such as WebGL, CSS3, HTML5 or any JavaScript animation library. In addiiton access native widgets, toolbars, menus through JS.</p>
+          <p>Design your applications and develop them with existing tools you're already familiar with. Tint supports powerful display capabilities such as WebGL, CSS3, HTML5 or any JavaScript animation library. In addition access native widgets, toolbars, menus through JS.</p>
         </div>
 
         <div class="column">
