--- a/public/index.html
+++ b/public/index.html
@@ -12,69 +12,6 @@
   </head>
   <body>
 
-    <!--    <div class="ui left vertical inverted labeled icon sidebar menu">
-    <a class="item">
-    <i class="home icon"></i>
-    Home
-    </a>
-    <a class="item">
-    <i class="block layout icon"></i>
-    Topics
-    </a>
-    <a class="item">
-    <i class="smile icon"></i>
-    Friends
-    </a>
-    <a class="item">
-    <i class="calendar icon"></i>
-    History
-    </a>
-    <a class="item">
-    <i class="mail icon"></i>
-    Messages
-    </a>
-    <a class="item">
-    <i class="chat icon"></i>
-    Discussions
-    </a>
-    <a class="item">
-    <i class="trophy icon"></i>
-    Achievements
-    </a>
-    <a class="item">
-    <i class="shop icon"></i>
-    Store
-    </a>
-    <a class="item">
-    <i class="settings icon"></i>
-    Settings
-    </a>
-    </div>
-    -->
-
-    <!--       <div class="ui secondary menu navigation">
-    <div class="item">
-    <img id="logo" src="tint-logo2.svg">
-    </div>
-    <a id="menu" class="item">
-    <i class="list layout icon"></i>
-    </a>
-    <a class="item">
-    <i class="sign in icon"></i>
-    </a>
-    <div class="right menu">
-    <div class="item">
-    <div class="ui transparent icon input">
-    <input type="text" placeholder="Search...">
-    <i class="search link icon"></i>
-    </div>
-    </div>
-    <div class="item">
-    <img id="mascot" src="tint.svg">
-    </div>
-    </div>
-    </div>
-    -->
     <div class="ui basic segment hero">
       <img id="wordmark" src="tint-wordmark.svg" />
       <h1 data-translation="hero-statement" class="ui header">
@@ -83,25 +20,28 @@
       <p data-translation="hero-followup">
         Tint compiles beautiful and unique applications for MacOS X and Windows using HTML5, CSS3, JavaScript and an advanced JS-based API.
       </p>
-      <div>
 
         <!-- Mail Chimp Email Form -->
-        <div id="mc_embed_signup">
-          <form class="ui transparent form segment" action="//inchingtowardsunderstanding.us1.list-manage.com/subscribe/post?u=e391b19fb3571d83a42f97c8c&amp;id=1402e2970a" method="post" target="_blank">
-            <div class="field">
-              <input placeholder="What's Your Email Address?" name="EMAIL" type="text" id="mce-EMAIL">
-              <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-              <div style="position: absolute; left: -5000px;"><input type="text" name="b_e391b19fb3571d83a42f97c8c_1402e2970a" tabindex="-1" value=""></div>
-            </div>
-            <div class="ui green submit button">Submit</div>
-          </form>
-        </div>
 
+      <div class="ui two column centered grid">
+        <div class="column">
+          <div id="mc_embed_signup">
+            <form class="ui transparent form" action="//inchingtowardsunderstanding.us1.list-manage.com/subscribe/post?u=e391b19fb3571d83a42f97c8c&amp;id=1402e2970a" method="post" target="_blank">
+              <div class="field">
+                <input placeholder="What's Your Email Address?" name="EMAIL" type="text" id="mce-EMAIL">
+                <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                <div style="position: absolute; left: -5000px;"><input type="text" name="b_e391b19fb3571d83a42f97c8c_1402e2970a" tabindex="-1" value=""></div>
+              </div>
+              <div class="ui green submit button">Submit</div>
+            </form>
+          </div>
+        </div>
       </div>
     </div>
 
-    <div class="ui three column grid centered stackable items benefits">
+    <!-- Benefits -->
 
+    <div class="ui three column grid centered stackable items benefits">
       <div class="row">
         <div class="column">
           <h2 class="ui header">Design Applications Quickly</h2>
@@ -114,36 +54,39 @@
         </div>
       </div>
 
-      <div class="column">
-        <h2 class="ui header">Application Packager</h2>
-        <p>Tint's Compiler takes your HTML, CSS and Javascript resources and compiles a MacOSX and Windows native application with no third-party dependencies or runtimes to install. Distribute your apps how you want.</p>
-      </div>
+      <div class="row">
+        <div class="column">
+          <h2 class="ui header">Application Packager</h2>
+          <p>Tint's Compiler takes your HTML, CSS and Javascript resources and compiles a MacOSX and Windows native application with no third-party dependencies or runtimes to install. Distribute your apps how you want.</p>
+        </div>
 
-      <div class="column">
-        <h2 class="ui header">Built-in Debugger</h2>
-        <p>Use built in debugging javascript tools to set break points, trace stacks, change HTML and JavaScript or inspect elements live.</p>
+        <div class="column">
+          <h2 class="ui header">Built-in Debugger</h2>
+          <p>Use built in debugging javascript tools to set break points, trace stacks, change HTML and JavaScript or inspect elements live.</p>
+        </div>
       </div>
     </div>
 
-    <div class="ui three column grid centered stackable">
+    <!-- Learning -->
 
+    <div class="ui three column grid centered stackable">
       <div class="column">
         <div class="ui segment">
           <div class="ui items">
             <div class="ui item">
               <div class="ui tiny image">
-                <a href="https://github.com/trueinteractions/tint2">
+                <a href="https://github.com/trueinteractions/tint2" target="_blank">
                   <img alt="github logo" src="octocat.png"/>
                 </a>
               </div>
               <div class="content">
                 <h2 class="ui header">
-                  <a href="https://github.com/trueinteractions/tint2/issues">
+                  <a href="https://github.com/trueinteractions/tint2/issues" target="_blank">
                     Issues and Planned Features
                   </a>
                 </h2>
                 <div class="description">
-                  <p>Find our source code, file issues, track changes and find out more from our <a href="https://github.com/trueinteractions/tint2">GitHub</a> account.</p>
+                  <p>Find our source code, file issues, track changes and find out more from our <a href="https://github.com/trueinteractions/tint2" target="_blank">GitHub</a> account.</p>
                 </div>
               </div>
             </div>
@@ -156,83 +99,27 @@
           <div class="ui items">
             <div class="ui item">
               <div class="ui tiny image">
-                <a href="https://www.trueinteractions.com/docs/">
+                <a href="https://www.trueinteractions.com/docs/" target="_blank">
                   <img alt="documentation" src="open-book.png"/>
                 </a>
               </div>
               <div class="content">
                 <h2 class="ui header">
-                  <a href="https://www.trueinteractions.com/tint2/docs/">
+                  <a href="https://www.trueinteractions.com/tint2/docs/" target="_blank">
                     TintAPI - Docs &amp; Examples
                   </a>
                 </h2>
                 <div class="description">
-                  <p>Browse through Tint's Javascript API, find overviews, examples and a <a href="https://www.trueinteractions.com/tint2/docs/tutorial-gettingstarted.html">30-second getting started guide</a>.</p>
+                  <p>Browse through Tint's Javascript API, find overviews, examples and a <a href="https://www.trueinteractions.com/tint2/docs/tutorial-gettingstarted.html" target="_blank">30-second getting started guide</a>.</p>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-
-      <!-- <div class="column"> -->
-      <!--   <h2 class="ui header">Find Community Support and Ask Questions</h2> -->
-      <!--   <p>Go to Tint's Google Group to ask questions, search for information, share your application or find out more about Tint's roadmap.</p> -->
-      <!-- </div> -->
-
     </div>
 
-    <!-- <table class="ui table pricing"> -->
-    <!--   <thead> -->
-    <!--     <tr> -->
-    <!--       <th>License</th> -->
-    <!--       <th>Previews</th> -->
-    <!--       <th>Upgrades</th> -->
-    <!--       <th>Usage</th> -->
-    <!--       <th>Support</th> -->
-    <!--       <th>CLI Utilities</th> -->
-    <!--       <th>Source Code</th> -->
-    <!--     </tr> -->
-    <!--   </thead> -->
-    <!--   <tbody> -->
-    <!--     <tr> -->
-    <!--       <td>$49 Personal License</td> -->
-    <!--       <td>None</td> -->
-    <!--       <td>None</td> -->
-    <!--       <td>Non-Profit</td> -->
-    <!--       <td>None</td> -->
-    <!--       <td>None</td> -->
-    <!--       <td>None</td> -->
-    <!--     </tr> -->
-    <!--     <tr> -->
-    <!--       <td>$99 Educational License</td> -->
-    <!--       <td>3-months</td> -->
-    <!--       <td>3-months</td> -->
-    <!--       <td>Non-Profit</td> -->
-    <!--       <td>Email</td> -->
-    <!--       <td>None</td> -->
-    <!--       <td>None</td> -->
-    <!--     </tr> -->
-    <!--     <tr> -->
-    <!--       <td>$299 Professional License</td> -->
-    <!--       <td>6-months</td> -->
-    <!--       <td>6-months</td> -->
-    <!--       <td>Any</td> -->
-    <!--       <td>Email</td> -->
-    <!--       <td>Included</td> -->
-    <!--       <td>None</td> -->
-    <!--     </tr> -->
-    <!--     <tr> -->
-    <!--       <td>$499 Commercial License</td> -->
-    <!--       <td>1-year</td> -->
-    <!--       <td>1-year</td> -->
-    <!--       <td>Any</td> -->
-    <!--       <td>Phone</td> -->
-    <!--       <td>Included</td> -->
-    <!--       <td>Included</td> -->
-    <!--     </tr> -->
-    <!--   </tbody> -->
-    <!-- </table> -->
+    <!-- Footer -->
 
     <footer>
       <div class="ui centered grid stackable">
