add language and os images

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
   </head>
   <body>
 
+    <!-- Hero -->
     <div class="ui basic segment hero">
       <img id="wordmark" src="tint-wordmark.svg" />
       <h1 data-translation="hero-statement" class="ui header">
@@ -21,96 +22,121 @@
         Tint compiles beautiful and unique applications for MacOS X and Windows using HTML5, CSS3, JavaScript and an advanced JS-based API.
       </p>
 
-        <!-- Mail Chimp Email Form -->
+      <!-- Mail Chimp Email Form -->
 
       <div class="ui two column centered grid">
         <div class="column">
-          <div id="mc_embed_signup">
-            <form class="ui transparent form" action="//inchingtowardsunderstanding.us1.list-manage.com/subscribe/post?u=e391b19fb3571d83a42f97c8c&amp;id=1402e2970a" method="post" target="_blank">
-              <div class="field">
-                <input placeholder="What's Your Email Address?" name="EMAIL" type="text" id="mce-EMAIL">
-                <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                <div style="position: absolute; left: -5000px;"><input type="text" name="b_e391b19fb3571d83a42f97c8c_1402e2970a" tabindex="-1" value=""></div>
-              </div>
-              <div class="ui green submit button">Submit</div>
-            </form>
+          <form class="ui transparent form" action="//inchingtowardsunderstanding.us1.list-manage.com/subscribe/post?u=e391b19fb3571d83a42f97c8c&amp;id=1402e2970a" method="post" target="_blank">
+            <div class="field">
+              <input placeholder="What's Your Email Address?" name="EMAIL" type="email">
+              <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+              <div style="position: absolute; left: -5000px;"><input type="text" name="b_e391b19fb3571d83a42f97c8c_1402e2970a" tabindex="-1" value=""></div>
+            </div>
+            <div class="ui green submit button">Submit</div>
+          </form>
+        </div>
+      </div>
+    </div>
+    <!-- /Hero -->
+
+    <div class="content">
+
+      <!-- CSS + HTML + JS = Win and/or OsX -->
+
+      <div class="ui five column grid centered">
+        <div class="column">
+          <img class="ui small image" alt="" src="js.gif"/>
+        </div>
+        <div class="column">
+          <img class="ui small image" alt="" src="css3.gif"/>
+        </div>
+        <div class="column">
+          <img class="ui small image" alt="" src="html5.gif"/>
+        </div>
+      </div>
+
+      <div class="ui five column grid centered">
+        <div class="column">
+          <img class="ui small image" alt="" src="app-store.png"/>
+        </div>
+        <div class="column">
+          <img class="ui small image" alt="" src="windows-app.png"/>
+        </div>
+      </div>
+
+      <!-- Benefits -->
+
+      <div class="ui three column grid centered stackable items benefits">
+        <div class="row">
+          <div class="column">
+            <h2 class="ui header">Design Applications Quickly</h2>
+            <p>Design your applications and develop them with existing tools you're already familiar with. Tint supports powerful display capabilities such as WebGL, CSS3, HTML5 or any JavaScript animation library. In addition access native widgets, toolbars, menus through JS.</p>
+          </div>
+
+          <div class="column">
+            <h2 class="ui header">Powerful Native Desktop API</h2>
+            <p>Tint's Javascript based API allows you to access functions and objects to integrate native functionality such as system settings, toolbars, trays, notifications and transparent, glass, framed, kiosk, fullscreen and regular window styles. </p>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="column">
+            <h2 class="ui header">Application Packager</h2>
+            <p>Tint's Compiler takes your HTML, CSS and Javascript resources and compiles a MacOSX and Windows native application with no third-party dependencies or runtimes to install. Distribute your apps how you want.</p>
+          </div>
+
+          <div class="column">
+            <h2 class="ui header">Built-in Debugger</h2>
+            <p>Use built in debugging javascript tools to set break points, trace stacks, change HTML and JavaScript or inspect elements live.</p>
           </div>
         </div>
       </div>
-    </div>
 
-    <!-- Benefits -->
+      <!-- Learning -->
 
-    <div class="ui three column grid centered stackable items benefits">
-      <div class="row">
+      <div class="ui three column grid centered stackable">
         <div class="column">
-          <h2 class="ui header">Design Applications Quickly</h2>
-          <p>Design your applications and develop them with existing tools you're already familiar with. Tint supports powerful display capabilities such as WebGL, CSS3, HTML5 or any JavaScript animation library. In addition access native widgets, toolbars, menus through JS.</p>
-        </div>
-
-        <div class="column">
-          <h2 class="ui header">Powerful Native Desktop API</h2>
-          <p>Tint's Javascript based API allows you to access functions and objects to integrate native functionality such as system settings, toolbars, trays, notifications and transparent, glass, framed, kiosk, fullscreen and regular window styles. </p>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="column">
-          <h2 class="ui header">Application Packager</h2>
-          <p>Tint's Compiler takes your HTML, CSS and Javascript resources and compiles a MacOSX and Windows native application with no third-party dependencies or runtimes to install. Distribute your apps how you want.</p>
-        </div>
-
-        <div class="column">
-          <h2 class="ui header">Built-in Debugger</h2>
-          <p>Use built in debugging javascript tools to set break points, trace stacks, change HTML and JavaScript or inspect elements live.</p>
-        </div>
-      </div>
-    </div>
-
-    <!-- Learning -->
-
-    <div class="ui three column grid centered stackable">
-      <div class="column">
-        <div class="ui segment">
-          <div class="ui items">
-            <div class="ui item">
-              <div class="ui tiny image">
-                <a href="https://github.com/trueinteractions/tint2" target="_blank">
-                  <img alt="github logo" src="octocat.png"/>
-                </a>
-              </div>
-              <div class="content">
-                <h2 class="ui header">
-                  <a href="https://github.com/trueinteractions/tint2/issues" target="_blank">
-                    Issues and Planned Features
+          <div class="ui segment">
+            <div class="ui items">
+              <div class="ui item">
+                <div class="ui tiny image">
+                  <a href="https://github.com/trueinteractions/tint2" target="_blank">
+                    <img alt="github logo" src="octo-cat.png"/>
                   </a>
-                </h2>
-                <div class="description">
-                  <p>Find our source code, file issues, track changes and find out more from our <a href="https://github.com/trueinteractions/tint2" target="_blank">GitHub</a> account.</p>
+                </div>
+                <div class="content">
+                  <h2 class="ui header">
+                    <a href="https://github.com/trueinteractions/tint2/issues" target="_blank">
+                      Issues and Planned Features
+                    </a>
+                  </h2>
+                  <div class="description">
+                    <p>Find our source code, file issues, track changes and find out more from our <a href="https://github.com/trueinteractions/tint2" target="_blank">GitHub</a> account.</p>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
 
-      <div class="column">
-        <div class="ui segment">
-          <div class="ui items">
-            <div class="ui item">
-              <div class="ui tiny image">
-                <a href="https://www.trueinteractions.com/docs/" target="_blank">
-                  <img alt="documentation" src="open-book.png"/>
-                </a>
-              </div>
-              <div class="content">
-                <h2 class="ui header">
-                  <a href="https://www.trueinteractions.com/tint2/docs/" target="_blank">
-                    TintAPI - Docs &amp; Examples
+        <div class="column">
+          <div class="ui segment">
+            <div class="ui items">
+              <div class="ui item">
+                <div class="ui tiny image">
+                  <a href="https://www.trueinteractions.com/docs/" target="_blank">
+                    <img alt="documentation" src="open-book.png"/>
                   </a>
-                </h2>
-                <div class="description">
-                  <p>Browse through Tint's Javascript API, find overviews, examples and a <a href="https://www.trueinteractions.com/tint2/docs/tutorial-gettingstarted.html" target="_blank">30-second getting started guide</a>.</p>
+                </div>
+                <div class="content">
+                  <h2 class="ui header">
+                    <a href="https://www.trueinteractions.com/tint2/docs/" target="_blank">
+                      TintAPI - Docs &amp; Examples
+                    </a>
+                  </h2>
+                  <div class="description">
+                    <p>Browse through Tint's Javascript API, find overviews, examples and a <a href="https://www.trueinteractions.com/tint2/docs/tutorial-gettingstarted.html" target="_blank">30-second getting started guide</a>.</p>
+                  </div>
                 </div>
               </div>
             </div>
